# fast-histogram-lookup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark.py
profiling/: profile_baseline.py
src/histlookup/: __init__.py  api.py  lookup_cy.c  lookup_cy.pyx  lookup_py.py
tests/: test_lookup.py
