[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-histogram-lookup"
version = "0.1.0"
description = "Cython-accelerated 3D histogram bin lookups with ~80x speedup over pure Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jean-Philippe Bureik", email = "jean-philippe@bureik.net"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "matplotlib>=3.5",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/JPBureik/fast-histogram-lookup"
Repository = "https://github.com/JPBureik/fast-histogram-lookup"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=histlookup --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
